# onlysaid

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  HELMDEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.wsl.yml  docker-compose.yml  next.config.ts  nginx.conf  runner-config-fix.toml  tsconfig.json
.github/workflows/: build-apps.yml  build-docker.yml  ci-cd.yml  code-quality.yml  deploy.yml  main-pipeline.yml  publish-artifacts.yml  publish-docker-artifacts.yml  test-electron-publish.yml
avatar_builder/: README.md  config.env  pyproject.toml  start_server.py  test_server.py
avatar_builder/avatar_builder_tts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
avatar_builder/config/: models.json
avatar_builder/examples/: client_example.py  test_long_text_chunking.py  websocket_client_example.py
avatar_builder/src/: __init__.py  main.py  models.py  tts_manager.py  utils.py
avatar_builder/src/avatar_builder_tts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
db_seeds/: 00_db.sql  02_plans.sql  03_chat.sql  06_workspaces.sql  07_kb.sql  08_files.sql  09_usage.sql
docker/: Dockerfile.next
docs/: README.md  _sidebar.md  ai.md  appssetup.md  development.md  faq.md  getting-started.md  index.html  interface.md  tutorials.md  use-cases.md
helm/: README.md  setup-local-k8s.ps1
knowledge_base/: main.py  requirements.txt
messages/: en.json  ja.json  ko.json  th-TH.json  vi-VN.json  zh-CN.json  zh-HK.json
scripts/: README.md  setup-jfrog.ps1  setup-jfrog.sh
socket_server/: redis_client.js  server.js
src/lib/: auth.ts  (+1 more)
(+60 files in other folders)
